Sonar issues been addressed